check ok pour la palette reste les 3 pages , delay et le loader

--- a/palettedugout.html
+++ b/palettedugout.html
@@ -19,137 +19,154 @@
     <main class="main">
         <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette">
       <div class="menu">
+        <div class="menu_heart">
         <h1>La palette du goût</h1>
-        <div class="heart">
-                <i class="far fa-heart"></i>
+        <span class="fa-stack">
+            <i class="fa-stack-1x far fa-heart"></i>
+            <i class="bgnone fa-stack-1x fas fa-heart"></i></span>
         </div>
         <div class="titre">
             <div class="entrees">
                 <div class="title">
                 <h2 class="title-underline">ENTREES</h2>
                 </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Fricassée d'escargot</h4>
-                            <p>Au piment d'Espelette</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>25€<h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
-
+                <div class="btn_carte">
+                    <div class="btn__body">
+                      <div class="btn__body__favorite">
+                        <i class="fa-solid fa-circle-check"></i>
+                      </div>
+                      <div class="btn__body__gras">
+                        <h3>Fricassée d'escargot</h3>
+                        <p>Au piment d'espelette</p>
+                      </div>
+                      <div class="btn__price">
+                        <p><strong>25€</strong></p>
+                      </div>
                     </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Foie gras de canard mi-cuit</h4>
-                            <p>Et ses copeaux de truffe noire</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>35€</h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
+                  </div>
+                  <div class="btn_carte">
+                    <div class="btn__body">
+                      <div class="btn__body__favorite">
+                        <i class="fa-solid fa-circle-check"></i>
+                      </div>
+                      <div class="btn__body__gras">
+                        <h3>Foie gras de canard mi-cuit</h3>
+                        <p>Et ses copeaux de truffe noire</p>
+                      </div>
+                      <div class="btn__price">
+                        <p><strong>35€</strong></p>
+                      </div>
                     </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Oeuf au plat</h4>
-                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                  </div><div class="btn_carte">
+                    <div class="btn__body">
+                      <div class="btn__body__favorite">
+                        <i class="fa-solid fa-circle-check"></i>
+                      </div>
+                      <div class="btn__body__gras">
+                        <h3>Oeuf au plat</h3>
+                        <p>Au piment d'espelette</p>
+                      </div>
+                      <div class="btn__price">
+                        <p><strong>20€</strong></p>
+                      </div>
                     </div>
-                        <div class="menu_price">
-                            <h5>20€</h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
-                    </div>
-            </div>
-            <div class="plats">
-                <div class="title">
-                <h2 class="title-underline">PLATS</h2>
-                </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Filet de boeuf aux herbes</h4>
-                            <p>Accompagné de sa ribambelle de légumes</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>40€</h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
-                </div>
-                <div class="menu_carte">
-                    <div class="menu_titre">
-                        <h4>Parmentier de queue de boeuf</h4>
-                        <p>À la truffe noire sur sa purée de panais</p>
-                    </div>
-                    <div class="menu_price">
-                        <h5>35€</h5>
-                    </div>
-                    <div class="box">
-                        <span class="check far fa-check-circle" aria-hidden="true"></span>
-                    </div>
-                </div>
-                <div class="menu_carte">
-                    <div class="menu_titre">
-                        <h4>Filet de turbot</h4>
-                        <p>Aux agrumes</p>
-                    </div>
-                    <div class="menu_price">
-                        <h5>44€</h5>
-                    </div>
-                    <div class="box">
-                        <span class="check far fa-check-circle" aria-hidden="true"></span>
-                    </div>
-                </div>
-            </div>
-            <div class="desserts">
-                <div class="title">
-                    <h2 class="title-underline">DESSERTS</h2>
-                    </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Paris-Brest</h4>
-                            <p>Revisité</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>18€</h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
-                    </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Macaron au chocolat d'exception</h4>
-                            <p>Et glace à la vanille de Madagascar</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>22€</h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
-                    </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Mousse au chocolat</h4>
-                            <p>Au piment d'Espelette et à la truffe noire</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>23€</h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
-                    </div>
-            </div>
+                  </div>
+<!-- fin entrees -->
+<!-- plats -->
+<div class="titre">
+    <div class="plats">
+        <div class="title">
+        <h2 class="title-underline">PLATS</h2>
         </div>
+        <div class="btn_carte">
+            <div class="btn__body">
+              <div class="btn__body__favorite">
+                <i class="fa-solid fa-circle-check"></i>
+              </div>
+              <div class="btn__body__gras">
+                <h3>Filet de boeuf aux herbes</h3>
+                <p>Accompagné de sa ribambelle de légumes</p>
+              </div>
+              <div class="btn__price">
+                <p><strong>40€</strong></p>
+              </div>
+            </div>
+          </div>
+          <div class="btn_carte">
+            <div class="btn__body">
+              <div class="btn__body__favorite">
+                <i class="fa-solid fa-circle-check"></i>
+              </div>
+              <div class="btn__body__gras">
+                <h3>Parmentier de queue de boeuf</h3>
+                <p>À la truffe noire sur sa purée de panais</p>
+              </div>
+              <div class="btn__price">
+                <p><strong>35€</strong></p>
+              </div>
+            </div>
+          </div><div class="btn_carte">
+            <div class="btn__body">
+              <div class="btn__body__favorite">
+                <i class="fa-solid fa-circle-check"></i>
+              </div>
+              <div class="btn__body__gras">
+                <h3>Filet de turbot</h3>
+                <p>Aux agrumes</p>
+              </div>
+              <div class="btn__price">
+                <p><strong>44€</strong></p>
+              </div>
+            </div>
+          </div>
+<!-- fin plats  -->
+<!-- desserts -->
+<div class="titre">
+    <div class="desserts">
+        <div class="title">
+        <h2 class="title-underline">DESSERTS</h2>
         </div>
+        <div class="btn_carte">
+            <div class="btn__body">
+              <div class="btn__body__favorite">
+                <i class="fa-solid fa-circle-check"></i>
+              </div>
+              <div class="btn__body__gras">
+                <h3>Paris-Brest</h3>
+                <p>Revisité</p>
+              </div>
+              <div class="btn__price">
+                <p><strong>18€</strong></p>
+              </div>
+            </div>
+          </div>
+          <div class="btn_carte">
+            <div class="btn__body">
+              <div class="btn__body__favorite">
+                <i class="fa-solid fa-circle-check"></i>
+              </div>
+              <div class="btn__body__gras">
+                <h3>Macaron au chocolat d'exception </h3>
+                <p>Et glace à la vanille de Madagascard</p>
+              </div>
+              <div class="btn__price">
+                <p><strong>22€</strong></p>
+              </div>
+            </div>
+          </div><div class="btn_carte">
+            <div class="btn__body">
+              <div class="btn__body__favorite">
+                <i class="fa-solid fa-circle-check"></i>
+              </div>
+              <div class="btn__body__gras">
+                <h3>Mousse au chocolat</h3>
+                <p>Au piment d'Espelette et à la truffe noire</p>
+              </div>
+              <div class="btn__price">
+                <p><strong>23€</strong></p>
+              </div>
+            </div>
+          </div>
         <button class="btn">Commander</button>
     </main>
     <section class="footer">
