--- a/palettedugout.html
+++ b/palettedugout.html
@@ -9,182 +9,208 @@
     <link rel="stylesheet" href="./CSS/menus.css">
 </head>
 <body>
+                    <!-- header -->
     <header>
         <div class="arrow" onclick="document.location.href='index.html'">
             <i class="fa-solid fa-arrow-left-long"></i>
             <a href="index.html"></a>
-            </div>
+        </div>
         <h1>Ohmyfood</h1>
     </header>
+                    <!-- fin header -->
     <main class="main">
         <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette">
-      <div class="menu">
-        <div class="menu_heart">
-        <h1>La palette du goût</h1>
-        <span class="fa-stack">
-            <i class="fa-stack-1x far fa-heart"></i>
-            <i class="bgnone fa-stack-1x fas fa-heart"></i></span>
-        </div>
-        <div class="titre">
-            <div class="entrees">
-                <div class="title">
-                <h2 class="title-underline">ENTREES</h2>
+                
+                    <!-- MENU -->
+        <div class="menu">
+            <div class="menu_heart">
+                <h1>La palette du goût</h1>
+                <span class="fa-stack">
+                    <i class="fa-stack-1x far fa-heart"></i>
+                    <i class="bgnone fa-stack-1x fas fa-heart"></i>
+                </span>
+            </div>
+                    <!-- entrees -->
+
+            <div class="titre">
+                <div class="entrees">
+                    <div class="title">
+                        <h2 class="title-underline">ENTREES</h2>
+                    </div>
+                    <div class="btn_carte">
+                        <div class="btn_card">
+                            <div class="btn_card_favorite">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                            <div class="btn_card_text">
+                                <h3>Fricassée d'escargot</h3>
+                                <p>Au piment d'espelette</p>
+                            </div>
+                            <div class="btn_price">
+                                <p><strong>25€</strong></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="btn_carte">
+                        <div class="btn_card">
+                            <div class="btn_card_favorite">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                            <div class="btn_card_text">
+                                <h3>Foie gras de canard mi-cuit</h3>
+                                <p>Et ses copeaux de truffe noire</p>
+                            </div>
+                            <div class="btn_price">
+                                <p><strong>35€</strong></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="btn_carte">
+                        <div class="btn_card">
+                            <div class="btn_card_favorite">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                            <div class="btn_card_text">
+                                <h3>Oeuf au plat</h3>
+                                <p>Au piment d'espelette</p>
+                            </div>
+                            <div class="btn_price">
+                                <p><strong>20€</strong></p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="btn_carte">
-                    <div class="btn__body">
-                      <div class="btn__body__favorite">
-                        <i class="fa-solid fa-circle-check"></i>
-                      </div>
-                      <div class="btn__body__gras">
-                        <h3>Fricassée d'escargot</h3>
-                        <p>Au piment d'espelette</p>
-                      </div>
-                      <div class="btn__price">
-                        <p><strong>25€</strong></p>
-                      </div>
+            </div>
+                    <!-- fin entrees -->
+
+                    <!-- plats -->
+            <div class="titre">
+                <div class="plats">
+                    <div class="title">
+                        <h2 class="title-underline">PLATS</h2>
                     </div>
-                  </div>
-                  <div class="btn_carte">
-                    <div class="btn__body">
-                      <div class="btn__body__favorite">
-                        <i class="fa-solid fa-circle-check"></i>
-                      </div>
-                      <div class="btn__body__gras">
-                        <h3>Foie gras de canard mi-cuit</h3>
-                        <p>Et ses copeaux de truffe noire</p>
-                      </div>
-                      <div class="btn__price">
-                        <p><strong>35€</strong></p>
-                      </div>
+                    <div class="btn_carte">
+                        <div class="btn_card">
+                            <div class="btn_card_favorite">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                            <div class="btn_card_text">
+                                <h3>Filet de boeuf aux herbes</h3>
+                                <p>Accompagné de sa ribambelle de légumes</p>
+                            </div>
+                            <div class="btn_price">
+                                <p><strong>40€</strong></p>
+                            </div>
+                        </div>
                     </div>
-                  </div><div class="btn_carte">
-                    <div class="btn__body">
-                      <div class="btn__body__favorite">
-                        <i class="fa-solid fa-circle-check"></i>
-                      </div>
-                      <div class="btn__body__gras">
-                        <h3>Oeuf au plat</h3>
-                        <p>Au piment d'espelette</p>
-                      </div>
-                      <div class="btn__price">
-                        <p><strong>20€</strong></p>
-                      </div>
+                    <div class="btn_carte">
+                        <div class="btn_card">
+                            <div class="btn_card_favorite">
+                            <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                            <div class="btn_card_text">
+                                <h3>Parmentier de queue de boeuf</h3>
+                                <p>À la truffe noire sur sa purée de panais</p>
+                            </div>
+                            <div class="btn_price">
+                                <p><strong>35€</strong></p>
+                            </div>
+                        </div>
                     </div>
-                  </div>
-<!-- fin entrees -->
-<!-- plats -->
-<div class="titre">
-    <div class="plats">
-        <div class="title">
-        <h2 class="title-underline">PLATS</h2>
+                    <div class="btn_carte">
+                        <div class="btn_card">
+                            <div class="btn_card_favorite">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                            <div class="btn_card_text">
+                                <h3>Filet de turbot</h3>
+                                <p>Aux agrumes</p>
+                            </div>
+                            <div class="btn_price">
+                                <p><strong>44€</strong></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                <!-- fin plats  -->
+
+                <!-- desserts -->
+            <div class="titre">
+                <div class="desserts">
+                    <div class="title">
+                        <h2 class="title-underline">DESSERTS</h2>
+                    </div>
+                    <div class="btn_carte">
+                        <div class="btn_card">
+                            <div class="btn_card_favorite">
+                            <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                            <div class="btn_card_text">
+                                <h3>Paris-Brest</h3>
+                                <p>Revisité</p>
+                            </div>
+                            <div class="btn_price">
+                                <p><strong>18€</strong></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="btn_carte">
+                        <div class="btn_card">
+                            <div class="btn_card_favorite">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                            <div class="btn_card_text">
+                                <h3>Macaron au chocolat d'exception </h3>
+                                <p>Et glace à la vanille de Madagascard</p>
+                            </div>
+                            <div class="btn_price">
+                                <p><strong>22€</strong></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="btn_carte">
+                        <div class="btn_card">
+                            <div class="btn_card_favorite">
+                                <i class="fa-solid fa-circle-check"></i>
+                            </div>
+                            <div class="btn_card_text">
+                                <h3>Mousse au chocolat</h3>
+                                <p>Au piment d'Espelette et à la truffe noire</p>
+                                </div>
+                            <div class="btn_price">
+                                <p><strong>23€</strong></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                    <!-- fin de desserts -->
         </div>
-        <div class="btn_carte">
-            <div class="btn__body">
-              <div class="btn__body__favorite">
-                <i class="fa-solid fa-circle-check"></i>
-              </div>
-              <div class="btn__body__gras">
-                <h3>Filet de boeuf aux herbes</h3>
-                <p>Accompagné de sa ribambelle de légumes</p>
-              </div>
-              <div class="btn__price">
-                <p><strong>40€</strong></p>
-              </div>
-            </div>
-          </div>
-          <div class="btn_carte">
-            <div class="btn__body">
-              <div class="btn__body__favorite">
-                <i class="fa-solid fa-circle-check"></i>
-              </div>
-              <div class="btn__body__gras">
-                <h3>Parmentier de queue de boeuf</h3>
-                <p>À la truffe noire sur sa purée de panais</p>
-              </div>
-              <div class="btn__price">
-                <p><strong>35€</strong></p>
-              </div>
-            </div>
-          </div><div class="btn_carte">
-            <div class="btn__body">
-              <div class="btn__body__favorite">
-                <i class="fa-solid fa-circle-check"></i>
-              </div>
-              <div class="btn__body__gras">
-                <h3>Filet de turbot</h3>
-                <p>Aux agrumes</p>
-              </div>
-              <div class="btn__price">
-                <p><strong>44€</strong></p>
-              </div>
-            </div>
-          </div>
-<!-- fin plats  -->
-<!-- desserts -->
-<div class="titre">
-    <div class="desserts">
-        <div class="title">
-        <h2 class="title-underline">DESSERTS</h2>
-        </div>
-        <div class="btn_carte">
-            <div class="btn__body">
-              <div class="btn__body__favorite">
-                <i class="fa-solid fa-circle-check"></i>
-              </div>
-              <div class="btn__body__gras">
-                <h3>Paris-Brest</h3>
-                <p>Revisité</p>
-              </div>
-              <div class="btn__price">
-                <p><strong>18€</strong></p>
-              </div>
-            </div>
-          </div>
-          <div class="btn_carte">
-            <div class="btn__body">
-              <div class="btn__body__favorite">
-                <i class="fa-solid fa-circle-check"></i>
-              </div>
-              <div class="btn__body__gras">
-                <h3>Macaron au chocolat d'exception </h3>
-                <p>Et glace à la vanille de Madagascard</p>
-              </div>
-              <div class="btn__price">
-                <p><strong>22€</strong></p>
-              </div>
-            </div>
-          </div><div class="btn_carte">
-            <div class="btn__body">
-              <div class="btn__body__favorite">
-                <i class="fa-solid fa-circle-check"></i>
-              </div>
-              <div class="btn__body__gras">
-                <h3>Mousse au chocolat</h3>
-                <p>Au piment d'Espelette et à la truffe noire</p>
-              </div>
-              <div class="btn__price">
-                <p><strong>23€</strong></p>
-              </div>
-            </div>
-          </div>
-        <button class="btn">Commander</button>
     </main>
+                    <!-- boutton commander -->
+
+    <button class="btn">Commander</button>
+
+                    <!-- footer -->
     <section class="footer">
         <footer class="footer_container">
           <h3>Ohmyfood</h3>
-          <div class="href1">
-            <a class="ustensils" href="ustensils">
-              <i class="fas fa-utensils" aria-hidden="true">
-              </i>Proposer un restaurant</a>
-            <a class="help" href="helping">
-              <i class="fas fa-hands-helping" aria-hidden="true">
-              </i>Devenir partenaire</a>
-          </div>
-          <div class="href2">
-            <a class="mentions" href="mentions">Mentions légales</a>
-            <a class="mail" href="mailto:">Contact</a>
-          </div>
+            <div class="href1">
+                <a class="ustensils" href="ustensils">
+                    <i class="fas fa-utensils" aria-hidden="true">
+                    </i>Proposer un restaurant</a>
+                <a class="help" href="helping">
+                    <i class="fas fa-hands-helping" aria-hidden="true">
+                    </i>Devenir partenaire</a>
+            </div>
+            <div class="href2">
+                <a class="mentions" href="mentions">
+                    Mentions légales</a>
+                <a class="mail" href="mailto:">
+                    Contact</a>
+            </div>
         </footer>
-      </section>
+    </section>
 </body>
 </html>
