--- a/ledelice.html
+++ b/ledelice.html
@@ -18,155 +18,196 @@
     </header>
     <main class="lanote">
         <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="palette">
-        <div class="menu">
-            <h1>Le délice des sens</h1>
-            <div class="heart">
-                <i class="far fa-heart"></i>
-        </div>
-        <div class="titre">
-            <div class="entrees">
-                <div class="title">
-                    <h2 class="title-underline">ENTREES</h2>
-                    </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Tartare de thon</h4>
-                            <p>Assaisonné au yuzu</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>25€<h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
-                    </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Bouchée de homard croustillant</h4>
-                            <p>Et sa farandole de petits légumes</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>35€<h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
-                    </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Velouté de cèpes</h4>
-                            <p>Aux truffes</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>20€<h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
-                    </div>
+                <!-- MENU -->
+                <div class="menu">
+                    <div class="menu_heart">
+        <h1>Le delice des sens</h1>
+        <span class="fa-stack">
+         <i class="fa-stack-1x far fa-heart"></i>
+            <i class="bgnone fa-stack-1x fas fa-heart"></i>
+        </span>
+    </div>
+            <!-- entrees -->
+
+    <div class="titre">
+        <div class="entrees">
+            <div class="title">
+                <h2 class="title-underline">ENTREES</h2>
             </div>
-            <div class="plats">
-                <div class="title">
-                    <h2 class="title-underline">PLATS</h2>
+            <div class="btn_carte">
+                <div class="btn_card">
+                    <div class="btn_card_favorite">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Poulet rôti aux herbes de Provence</h4>
-                            <p>Et sa crème de truffe</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>45€<h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
+                    <div class="btn_card_text">
+                        <h3>Tartare de thon</h3>
+                        <p>Assaisonné au yuzu</p>
+                    </div>
+                    <div class="btn_price">
+                        <p><strong>25€</strong></p>
+                    </div>
                 </div>
-                <div class="menu_carte">
-                    <div class="menu_titre">
-                        <h4>Langouste rôtie</h4>
+            </div>
+            <div class="btn_carte">
+                <div class="btn_card">
+                    <div class="btn_card_favorite">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                    <div class="btn_card_text">
+                        <h3>Bouchée de homard croustillant</h3>
+                        <p>Et sa farandole de petits légumes</p>
+                    </div>
+                    <div class="btn_price">
+                        <p><strong>35€</strong></p>
+                    </div>
+                </div>
+            </div>
+            <div class="btn_carte">
+                <div class="btn_card">
+                    <div class="btn_card_favorite">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                    <div class="btn_card_text">
+                        <h3>Velouté de cèpes</h3>
+                        <p>Aux truffes</p>
+                    </div>
+                    <div class="btn_price">
+                        <p><strong>20€</strong></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+            <!-- fin entrees -->
+
+            <!-- plats -->
+    <div class="titre">
+        <div class="plats">
+            <div class="title">
+                <h2 class="title-underline">PLATS</h2>
+            </div>
+            <div class="btn_carte">
+                <div class="btn_card">
+                    <div class="btn_card_favorite">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                    <div class="btn_card_text">
+                        <h3>Poulet rôti aux herbes de Provence</h3>
+                        <p>Et sa crème de truffe</p>
+                    </div>
+                    <div class="btn_price">
+                        <p><strong>40€</strong></p>
+                    </div>
+                </div>
+            </div>
+            <div class="btn_carte">
+                <div class="btn_card">
+                    <div class="btn_card_favorite">
+                    <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                    <div class="btn_card_text">
+                        <h3>Langouste rôtie</h3>
                         <p>Et ses légumes de saison</p>
                     </div>
-                    <div class="menu_price">
-                        <h5>35€<h5>
-                    </div>
-                    <div class="box">
-                        <span class="check far fa-check-circle" aria-hidden="true"></span>
-                    </div>
-                </div>
-                <div class="menu_carte">
-                    <div class="menu_titre">
-                        <h4>Côte de boeuf Angus</h4>
-                        <p>Et sa purée de panais</p>
-                    </div>
-                    <div class="menu_price">
-                        <h5>44€<h5>
-                    </div>
-                    <div class="box">
-                        <span class="check far fa-check-circle" aria-hidden="true"></span>
+                    <div class="btn_price">
+                        <p><strong>35€</strong></p>
                     </div>
                 </div>
             </div>
-            <div class="desserts">
-                <div class="title">
-                    <h2 class="title-underline">DESSERTS</h2>
+            <div class="btn_carte">
+                <div class="btn_card">
+                    <div class="btn_card_favorite">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Farandole de desserts</h4>
-                            <p>Du chef</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>18€<h5>
+                    <div class="btn_card_text">
+                        <h3>Côte de boeuf Angus</h3>
+                        <p>Et sa purée de panais</p>
                     </div>
-                    <div class="box">
-                        <span class="check far fa-check-circle" aria-hidden="true"></span>
-                    </div>
-                    </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Crème brulée</h4>
-                            <p>Revisitée</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>22€<h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
-                    </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Tiramisu</h4>
-                            <p>À la noisette</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>23€</h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
+                    <div class="btn_price">
+                        <p><strong>44€</strong></p>
                     </div>
                 </div>
             </div>
         </div>
-        <button class="btn">Commander</button>
-    </main>
-    <section class="footer">
-        <footer class="footer_container">
-          <h3>Ohmyfood</h3>
-          <div class="href1">
-            <a class="ustensils" href="ustensils">
-              <i class="fas fa-utensils" aria-hidden="true">
-              </i>Proposer un restaurant</a>
-            <a class="help" href="helping">
-              <i class="fas fa-hands-helping" aria-hidden="true">
-              </i>Devenir partenaire</a>
-          </div>
-          <div class="href2">
-            <a class="mentions" href="mentions">Mentions légales</a>
-            <a class="mail" href="mailto:">Contact</a>
-          </div>
-        </footer>
-      </section>
+    </div>
+        <!-- fin plats  -->
+
+        <!-- desserts -->
+    <div class="titre">
+        <div class="desserts">
+            <div class="title">
+                <h2 class="title-underline">DESSERTS</h2>
+            </div>
+            <div class="btn_carte">
+                <div class="btn_card">
+                    <div class="btn_card_favorite">
+                    <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                    <div class="btn_card_text">
+                        <h3>Farandole de desserts</h3>
+                        <p>Du chef</p>
+                    </div>
+                    <div class="btn_price">
+                        <p><strong>18€</strong></p>
+                    </div>
+                </div>
+            </div>
+            <div class="btn_carte">
+                <div class="btn_card">
+                    <div class="btn_card_favorite">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                    <div class="btn_card_text">
+                        <h3>Crème brulée</h3>
+                        <p>Revisitée</p>
+                    </div>
+                    <div class="btn_price">
+                        <p><strong>22€</strong></p>
+                    </div>
+                </div>
+            </div>
+            <div class="btn_carte">
+                <div class="btn_card">
+                    <div class="btn_card_favorite">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                    <div class="btn_card_text">
+                        <h3>Tiramisu</h3>
+                        <p>À la noisette</p>
+                        </div>
+                    <div class="btn_price">
+                        <p><strong>23€</strong></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</main>
+            <!-- fin de desserts -->
+            <!-- boutton commander -->
+
+<button class="btn">Commander</button>
+
+            <!-- footer -->
+<section class="footer">
+<footer class="footer_container">
+  <h3>Ohmyfood</h3>
+    <div class="href1">
+        <a class="ustensils" href="ustensils">
+            <i class="fas fa-utensils" aria-hidden="true">
+            </i>Proposer un restaurant</a>
+        <a class="help" href="helping">
+            <i class="fas fa-hands-helping" aria-hidden="true">
+            </i>Devenir partenaire</a>
+    </div>
+    <div class="href2">
+        <a class="mentions" href="mentions">
+            Mentions légales</a>
+        <a class="mail" href="mailto:">
+            Contact</a>
+    </div>
+</footer>
+</section>
 </body>
 </html>
