--- a/palettedugout.html
+++ b/palettedugout.html
@@ -21,7 +21,7 @@
     <main class="main">
         <img src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="palette">
                 
-                    <!-- MENU -->
+<!-- MENU -->
         <div class="menu">
             <div class="menu_heart">
                 <h1>La palette du goût</h1>
@@ -72,7 +72,7 @@
                             </div>
                             <div class="btn_card_text">
                                 <h3>Oeuf au plat</h3>
-                                <p>Au piment d'espelette</p>
+                                <p>Assaisonné à la truffe sur lit de caviar</p>
                             </div>
                             <div class="btn_price">
                                 <p><strong>20€</strong></p>
