--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -18,167 +18,211 @@
     </header>
     <main class="main">
         <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="palette">
-        <div class="menu">
-            <h1>La note enchantée</h1>
-            <div class="heart">
-                <i class="far fa-heart"></i>
-        </div>
-        <div class="titre">
-            <div class="entrees">
-                <div class="title">
-                    <h2 class="title-underline">ENTREES</h2>
-                    </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Ravioles de foie gras</h4>
-                            <p>Accompagnés de leur crème à la truffe</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>25€<h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
-                    </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Caviar osciètre</h4>
-                            <p>Sur blini à la farine de blé noir</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>35€<h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
-                    </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Homard et espuma de potiron</h4>
-                            <p>Mariné aux zestes d'orange</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>20€<h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
-                    </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Foie gras de canard cuit entier</h4>
-                            <p>Confiture de figue et pain toasté</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>35€<h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
-                    </div>
+
+        <!-- MENU -->
+<div class="menu">
+    <div class="menu_heart">
+        <h1>La note enchantee</h1>
+        <span class="fa-stack">
+            <i class="fa-stack-1x far fa-heart"></i>
+            <i class="bgnone fa-stack-1x fas fa-heart"></i>
+        </span>
+    </div>
+            <!-- entrees -->
+
+    <div class="titre">
+        <div class="entrees">
+            <div class="title">
+                <h2 class="title-underline">ENTREES</h2>
             </div>
-            <div class="plats">
-                <div class="title">
-                    <h2 class="title-underline">PLATS</h2>
+            <div class="btn_carte">
+                <div class="btn_card">
+                    <div class="btn_card_favorite">
+                        <i class="fa-solid fa-circle-check"></i>
                     </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Noix de coquilles Saint-Jacques</h4>
-                            <p>Sur lit de purée de céleri-rave</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>40€<h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
+                    <div class="btn_card_text">
+                        <h3>Ravioles de foie gras</h3>
+                        <p>Accompagnés de leur crème à la truffe</p>
+                    </div>
+                    <div class="btn_price">
+                        <p><strong>25€</strong></p>
+                    </div>
                 </div>
-                <div class="menu_carte">
-                    <div class="menu_titre">
-                        <h4>Langoustine poêlée</h4>
+            </div>
+            <div class="btn_carte">
+                <div class="btn_card">
+                    <div class="btn_card_favorite">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                    <div class="btn_card_text">
+                        <h3>Caviar osciètre</h3>
+                        <p>Sur blini à la farine de blé noir</p>
+                    </div>
+                    <div class="btn_price">
+                        <p><strong>35€</strong></p>
+                    </div>
+                </div>
+            </div>
+            <div class="btn_carte">
+                <div class="btn_card">
+                    <div class="btn_card_favorite">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                    <div class="btn_card_text">
+                        <h3>Homard et espuma de potiron</h3>
+                        <p>Mariné aux zestes d'orange</p>
+                    </div>
+                    <div class="btn_price">
+                        <p><strong>20€</strong></p>
+                    </div>
+                </div>
+            </div>
+            <div class="btn_carte">
+                <div class="btn_card">
+                    <div class="btn_card_favorite">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                    <div class="btn_card_text">
+                        <h3>Foie gras de canard cuit entier</h3>
+                        <p>Confiture de figue et pain toasté</p>
+                    </div>
+                    <div class="btn_price">
+                        <p><strong>35€</strong></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+            <!-- fin entrees -->
+
+            <!-- plats -->
+    <div class="titre">
+        <div class="plats">
+            <div class="title">
+                <h2 class="title-underline">PLATS</h2>
+            </div>
+            <div class="btn_carte">
+                <div class="btn_card">
+                    <div class="btn_card_favorite">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                    <div class="btn_card_text">
+                        <h3>Noix de coquilles Saint-Jacques</h3>
+                        <p>Sur lit de purée de céleri-rave</p>
+                    </div>
+                    <div class="btn_price">
+                        <p><strong>40€</strong></p>
+                    </div>
+                </div>
+            </div>
+            <div class="btn_carte">
+                <div class="btn_card">
+                    <div class="btn_card_favorite">
+                    <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                    <div class="btn_card_text">
+                        <h3>Langoustine poêlée</h3>
                         <p>Purée de patate douce</p>
                     </div>
-                    <div class="menu_price">
-                        <h5>35€<h5>
-                    </div>
-                    <div class="box">
-                        <span class="check far fa-check-circle" aria-hidden="true"></span>
+                    <div class="btn_price">
+                        <p><strong>35€</strong></p>
                     </div>
                 </div>
-                <div class="menu_carte">
-                    <div class="menu_titre">
-                        <h4>Mijoté de queue de boeuf</h4>
+            </div>
+            <div class="btn_carte">
+                <div class="btn_card">
+                    <div class="btn_card_favorite">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                    <div class="btn_card_text">
+                        <h3>Mijoté de queue de boeuf</h3>
                         <p>Et riz sauvage aux zestes de citron</p>
                     </div>
-                    <div class="menu_price">
-                        <h5>44€<h5>
-                    </div>
-                    <div class="box">
-                        <span class="check far fa-check-circle" aria-hidden="true"></span>
+                    <div class="btn_price">
+                        <p><strong>44€</strong></p>
                     </div>
                 </div>
             </div>
-            <div class="desserts">
-                <div class="title">
-                    <h2 class="title-underline">DESSERTS</h2>
+        </div>
+    </div>
+        <!-- fin plats  -->
+
+        <!-- desserts -->
+    <div class="titre">
+        <div class="desserts">
+            <div class="title">
+                <h2 class="title-underline">DESSERTS</h2>
+            </div>
+            <div class="btn_carte">
+                <div class="btn_card">
+                    <div class="btn_card_favorite">
+                    <i class="fa-solid fa-circle-check"></i>
                     </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Macaron noisette et chocolat</h4>
-                            <p>Glace au caramel brun et sel de Guérande</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>18€<h5>
+                    <div class="btn_card_text">
+                        <h3>Macaron noisette et chocolat</h3>
+                        <p>Glace au caramel brun et sel de Guérande</p>
                     </div>
-                    <div class="box">
-                        <span class="check far fa-check-circle" aria-hidden="true"></span>
-                    </div>
-                    </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Baba au rhum revisité</h4>
-                            <p>Avec son coulis de citron</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>18€<h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
-                    </div>
-                    <div class="menu_carte">
-                        <div class="menu_titre">
-                            <h4>Tarte au citron meringuée</h4>
-                            <p>Déstructurée</p>
-                        </div>
-                        <div class="menu_price">
-                            <h5>23€</h5>
-                        </div>
-                        <div class="box">
-                            <span class="check far fa-check-circle" aria-hidden="true"></span>
-                        </div>
+                    <div class="btn_price">
+                        <p><strong>18€</strong></p>
                     </div>
                 </div>
             </div>
-        </div> 
-        <button class="btn">Commander</button>
-    </main>
-    <section class="footer">
-        <footer class="footer_container">
-          <h3>Ohmyfood</h3>
-          <div class="href1">
-            <a class="ustensils" href="ustensils">
-              <i class="fas fa-utensils" aria-hidden="true">
-              </i>Proposer un restaurant</a>
-            <a class="help" href="helping">
-              <i class="fas fa-hands-helping" aria-hidden="true">
-              </i>Devenir partenaire</a>
-          </div>
-          <div class="href2">
-            <a class="mentions" href="mentions">Mentions légales</a>
-            <a class="mail" href="mailto:">Contact</a>
-          </div>
-        </footer>
-      </section>
+            <div class="btn_carte">
+                <div class="btn_card">
+                    <div class="btn_card_favorite">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                    <div class="btn_card_text">
+                        <h3>Baba au rhum revisité</h3>
+                        <p>Avec son coulis de citron</p>
+                    </div>
+                    <div class="btn_price">
+                        <p><strong>22€</strong></p>
+                    </div>
+                </div>
+            </div>
+            <div class="btn_carte">
+                <div class="btn_card">
+                    <div class="btn_card_favorite">
+                        <i class="fa-solid fa-circle-check"></i>
+                    </div>
+                    <div class="btn_card_text">
+                        <h3>Tarte au citron meringuée</h3>
+                        <p>Déstructurée</p>
+                        </div>
+                    <div class="btn_price">
+                        <p><strong>23€</strong></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+            <!-- fin de desserts -->
+</div>
+</main>
+            <!-- boutton commander -->
+
+<button class="btn">Commander</button>
+
+            <!-- footer -->
+<section class="footer">
+<footer class="footer_container">
+  <h3>Ohmyfood</h3>
+    <div class="href1">
+        <a class="ustensils" href="ustensils">
+            <i class="fas fa-utensils" aria-hidden="true">
+            </i>Proposer un restaurant</a>
+        <a class="help" href="helping">
+            <i class="fas fa-hands-helping" aria-hidden="true">
+            </i>Devenir partenaire</a>
+    </div>
+    <div class="href2">
+        <a class="mentions" href="mentions">
+            Mentions légales</a>
+        <a class="mail" href="mailto:">
+            Contact</a>
+    </div>
+</footer>
+</section>
 </body>
 </html>
