footer plus long et scale sur fleche

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
-    <div class="loader"></div>
+  <div class="chargement">
+    <div class="spinner"></div>
+  </div>
     <header>
         <h1>Ohmyfood</h1>
     </header>
