derniere verif avant livrables

--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -17,7 +17,7 @@
         <h1>Ohmyfood</h1>
     </header>
     <main class="main">
-        <img src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="palette">
+        <img src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="alafrancaise">
 
                       <!-- MENU -->
                     <div class="menu">
