--- a/ledelice.html
+++ b/ledelice.html
@@ -17,7 +17,7 @@
         <h1>Ohmyfood</h1>
     </header>
     <main class="lanote">
-        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="palette">
+        <img src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="ledelice
                 <!-- MENU -->
                 <div class="menu">
                     <div class="menu_heart">
