--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <header>
         <h1>Ohmyfood</h1>
     </header>
+    <!-- header -->
     <main>
         <div class="city">
             <i class="fa-solid fa-location-dot"></i>
